[package]
name = "rsPowerSupply"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
cty = "0.2.2"
rnarduino = { path = "../../lnArduino/rust/rnArduino" }
ili9341 = { path = "../../externals/simplerILI9341/rust/ili9341", features =["hs"]}
lnspi_ili9341 =     { path = "../../externals/simplerILI9341/rust/demo_ili9341_320x240_spi"}
ufmt = "*"
heapless = { version = "*", features = ["ufmt-impl"] }
simpler_gfx= {git="https://github.com/mean00/simpler_gfx.git"}
mcp4725 = { path = "mcp4725" }
ina219 = { path = "ina219" }
pcf8574 = { path = "pcf8574" }
rs_psu_gfx = { path = "display/psu_gfx" }

[lib]
name = "rsPowerSupply"
path = "src/lib.rs"
crate-type = ["staticlib"] # Creates static lib

[profile.dev]
codegen-units = 1
debug = true
lto = true
opt-level       = 's'

[profile.release]
codegen-units = 1
debug = true
lto = true
opt-level       = 's'
