[package]
name = "pcf8574"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cty = "0.2.2"
rust_esprit = { path = "../../../esprit/rust/rust_esprit"}


[profile.dev]
codegen-units = 1
debug = true
lto = true
opt-level       = 's'

[profile.release]
codegen-units = 1
debug = true
lto = true
opt-level       = 's'
